Fix padding on mobile view

--- a/client/src/components/Subpages/SettingsCredentials.module.css
+++ b/client/src/components/Subpages/SettingsCredentials.module.css
@@ -1,5 +1,5 @@
 .settings-credentials {
-    padding: 2rem;
+    padding: unset;
 }
 .settings-credentials__title h3 {
     font-size: 1.3rem;
@@ -21,12 +21,18 @@
     border-radius: 5px;
 }
 @media (min-width: 769px) and (max-width: 1024px) {
+    .settings-credentials {
+        padding: 2rem;
+    }
     .settings-credentials__password-form,
     .settings-credentials__email-form {
         width: 50%;
     }
 }
 @media (min-width: 1025px) {
+    .settings-credentials {
+        padding: 2rem;
+    }
     .settings-credentials__password-form,
     .settings-credentials__email-form {
         width: 50%;
